Added array.js object.js and switch.js

--- a/index.html
+++ b/index.html
@@ -19,18 +19,28 @@
 
         <button id="simple-switch-btn">Simple Switch Sample</button>
         
-   
-        <!-- <button id="complex-switch-btn">Complex Switch Sample</button>
+        <button id="complex-switch-btn">Complex Switch Sample</button>
 
         <button id="for-in-btn">For/in Sample</button>
 
         <button id="for-of-btn">For/of Sample</button>
 
         <button id="foreach-btn">Foreach Sample</button>
-    -->
+
+        <button id="plus-sign-btn">Plus Sign Sample</button>
+
+        <button id="comparison-btn">Comparison Sample</button>
+
+        <button id="ternary-btn">Ternary Sample</button>
+
+        <button id="splice-btn">Splice Sample</button>
+
     </section>
 
     <script src="./js/main.js"></script>
+    <script src="js/switch.js"></script>
+    <script src="js/object.js"></script>
+    <script src="js/array.js"></script>
 
 </body>
 </html>
