added 'use strict' to the javascript files.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -35,12 +35,47 @@
 
         <button id="splice-btn">Splice Sample</button>
 
+        <button id="spread-btn">Spread Sample</button>
+
+    </section>
+
+    <section>
+        <button id="try-catch-btn">Try, Catch, Finally Sample</button>
+
+        <button id="throw-btn">Throw Sample</button>
+
+        <button id="ref-error-btn">Reference Handling Sample</button>
+
+        <button id="range-error-btn">Range Error Handling Sample</button>
+
+        <button id="type-error-btn">Type Error Handling Sample</button>
+
+        <button id="uri-error-btn">URI Error Handling Sample</button>
+
+        <button id="syntax-error-btn">Syntax Error Handling Sample</button>
+
+    </section>
+
+    <section>
+        <button id="data-type-btn">Data Type Sample</button>
+    </section>
+
+    <section>
+     
+        <button id="this-event-btn" onclick="eventHandler(this)">This Event Sample</button>
+        <button id="this-object-literal-btn">This Object Literal Sample</button>
     </section>
 
     <script src="./js/main.js"></script>
-    <script src="js/switch.js"></script>
-    <script src="js/object.js"></script>
-    <script src="js/array.js"></script>
+    <script src="./js/switch.js"></script>
+    <script src="./js/object.js"></script>
+    <script src="./js/array.js"></script>
+    <script src="./js/trycatch.js"></script>
+    <script src="./js/throw.js"></script>
+    <script src="./js/errorhandling.js"></script>
+    <script src="./js/datatypes.js"></script>
+    <script src="./js/this.js"></script>
+    <script src="./js/spread.js"></script>
 
 </body>
 </html>
