data types examples added.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ s<!DOCTYPE html>
         </nav>
     </header>
 
-    <section>
+    <section class="button-group">
 
         <button id="simple-switch-btn">Simple Switch Sample</button>
         
@@ -37,9 +37,11 @@ s<!DOCTYPE html>
 
         <button id="spread-btn">Spread Sample</button>
 
+        <button id="instantiate-btn">Instantiate Sample</button>
+
     </section>
 
-    <section>
+    <section class="button-group">
         <button id="try-catch-btn">Try, Catch, Finally Sample</button>
 
         <button id="throw-btn">Throw Sample</button>
@@ -56,12 +58,11 @@ s<!DOCTYPE html>
 
     </section>
 
-    <section>
+    <section class="button-group">
         <button id="data-type-btn">Data Type Sample</button>
     </section>
 
-    <section>
-     
+    <section class="button-group">
         <button id="this-event-btn" onclick="eventHandler(this)">This Event Sample</button>
         <button id="this-object-literal-btn">This Object Literal Sample</button>
     </section>
@@ -76,6 +77,7 @@ s<!DOCTYPE html>
     <script src="./js/datatypes.js"></script>
     <script src="./js/this.js"></script>
     <script src="./js/spread.js"></script>
+    <script src="./js/Instatiation.js"></script>
 
 </body>
 </html>
